Fixed Z-index on award banner

--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ background:url('https://s3.amazonaws.com/onepagelove/one-page-love-award-left.pn
 position:absolute; 
 top:300px; 
 left:0px; 
-z-index:99999; 
+z-index:1; 
 } 
 
 .opm-ribbon a { 
